test/langtools/tools/javac/valhalla/lworld-values/CheckFeatureGate1.out
CheckFeatureGate1.java:10:12: compiler.err.feature.not.supported.in.source.plural: (compiler.misc.feature.primitive.classes), 13, 19
1 error
